// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SecondaryHeading /> with color prop 1`] = `
.c0 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 0;
  text-decoration: none;
  font-size: 26px;
  line-height: 28px;
}

@media (min-width:568px) {
  .c0 {
    font-size: 30px;
    line-height: 32px;
  }
}

@media (min-width:768px) {
  .c0 {
    font-size: 32px;
    line-height: 35px;
  }
}

<SecondaryHeading
  color="white"
>
  <TextPrimitive
    color="white"
    element="h2"
    spacing="none"
    variant="h2"
    weight="bold"
  >
    <Styled(Primitive)
      color="white"
      element="h2"
      spacing="none"
      underline={false}
      weight="bold"
    >
      <Primitive
        className="c0"
        color="white"
        element="h2"
        spacing="none"
        underline={false}
        weight="bold"
      >
        <h2
          className="c0"
        >
          test
        </h2>
      </Primitive>
    </Styled(Primitive)>
  </TextPrimitive>
</SecondaryHeading>
`;

exports[`<SecondaryHeading /> with initial props 1`] = `
.c0 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 0;
  text-decoration: none;
  font-size: 26px;
  line-height: 28px;
}

@media (min-width:568px) {
  .c0 {
    font-size: 30px;
    line-height: 32px;
  }
}

@media (min-width:768px) {
  .c0 {
    font-size: 32px;
    line-height: 35px;
  }
}

<SecondaryHeading>
  <TextPrimitive
    color="black"
    element="h2"
    spacing="none"
    variant="h2"
    weight="bold"
  >
    <Styled(Primitive)
      color="black"
      element="h2"
      spacing="none"
      underline={false}
      weight="bold"
    >
      <Primitive
        className="c0"
        color="black"
        element="h2"
        spacing="none"
        underline={false}
        weight="bold"
      >
        <h2
          className="c0"
        >
          test
        </h2>
      </Primitive>
    </Styled(Primitive)>
  </TextPrimitive>
</SecondaryHeading>
`;

exports[`<SecondaryHeading /> with weight prop 1`] = `
.c0 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 0;
  text-decoration: none;
  font-size: 26px;
  line-height: 28px;
}

@media (min-width:568px) {
  .c0 {
    font-size: 30px;
    line-height: 32px;
  }
}

@media (min-width:768px) {
  .c0 {
    font-size: 32px;
    line-height: 35px;
  }
}

<SecondaryHeading
  weight="light"
>
  <TextPrimitive
    color="black"
    element="h2"
    spacing="none"
    variant="h2"
    weight="light"
  >
    <Styled(Primitive)
      color="black"
      element="h2"
      spacing="none"
      underline={false}
      weight="light"
    >
      <Primitive
        className="c0"
        color="black"
        element="h2"
        spacing="none"
        underline={false}
        weight="light"
      >
        <h2
          className="c0"
        >
          test
        </h2>
      </Primitive>
    </Styled(Primitive)>
  </TextPrimitive>
</SecondaryHeading>
`;
